kubernetes/apps/k0s/home-automation/frigate/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: home-automation
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://oauth.logfold.com/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.logfold.com/oauth2/start
spec:
  ingressClassName: nginx
  rules:
  - host: "cctv.logfold.com"
    http:
      paths:
      - backend:
          service:
            name: frigate
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "cctv.logfold.com"
